--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
