--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node App.js"
+    "dev": "node --watch App.js"
   },
   "keywords": [],
   "author": "",
