--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.6",
     "react-bootstrap": "^2.9.1",
     "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
