--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "mongoose-sequence": "^5.3.1",
