Fix issues: (Reliability) Arregla las validaciones en ChangeCard usando PropTypes

--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@daypilot/daypilot-lite-react": "^3.18.0"
+    "@daypilot/daypilot-lite-react": "^3.18.0",
+    "prop-types": "^15.8.1"
   }
 }
